--- a/youtube-frontend/index.html
+++ b/youtube-frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://www.iconpacks.net/icons/1/free-youtube-icon-123-thumb.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Youtube</title>
+    <title>YouTube</title>
   </head>
   <body>
     <div id="root"></div>
